[project]
name = "Skin-Finalizing"
version = "0.1.0"
description = "Finalize legacy csgo_gc inventories with GUI loadout selection"
authors = [{ name = "Frosty"}]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
main = "src:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""
